--- a/charSheet.html
+++ b/charSheet.html
@@ -17,14 +17,14 @@
     <p class="race">Augmented</p>
     <p class="race">Synth</p>
   </div>
-  <div class="boxToggle" id="stress">
+  <div class="boxToggle">
     <h3>Stress</h3>
-      <p>6</p>
-      <p>5</p>
-      <p>4</p>
-      <p>3</p>
-      <p>2</p>
-      <p>1</p>
+      <p id="6">6</p>
+      <p id="5">5</p>
+      <p id="4">4</p>
+      <p id="3">3</p>
+      <p id="2">2</p>
+      <p id="1">1</p>
     </div>
   <div class="boxInput" id="hands">
     <p>Main Hand: </p>
