--- a/charSheet.html
+++ b/charSheet.html
@@ -8,71 +8,114 @@
 </head>
 
 <body>
+  <h1>Hopeless: Character Sheet</h1>
+
   <div class="roundBox" id="nameInput">
-    <h2 id="Name">Name: </h2>
-    <h3 id="Background">Background: </h3>
+    <label for="name">Name:</label>
+    <input type="text" id="name"><br>
+    <label for="Background">Background:</label>
+    <input type="text" id="Background"><br>
   </div>
+
   <div class="boxToggle" id="raceInput">
-    <p class="race">Human</p>
-    <p class="race">Augmented</p>
-    <p class="race">Synth</p>
+    <label for="human">Human</label>
+    <input type="radio" id="race" name="race" value="human"><br>
+    <label for="augmented">Augmented</label>
+    <input type="radio" id="race" name="race" value="augmented"><br>
+    <label for="synth">Synth</label>
+    <input type="radio" id="race" name="race" value="synth"><br>
   </div>
-  <div class="boxToggle">
-    <h3>Stress</h3>
-      <p id="6">6</p>
-      <p id="5">5</p>
-      <p id="4">4</p>
-      <p id="3">3</p>
-      <p id="2">2</p>
-      <p id="1">1</p>
-    </div>
-  <div class="boxInput" id="hands">
-    <p>Main Hand: </p>
-    <p>Off Hand: </p>
+  
+  <div class="roundBox" id="stress">
+    <h3>Stress:</h3>
+      <label id="six" for="6">6</label>
+      <input type="radio" id="six" name="stress" value="6"><br>
+      <label id="five" for="5">5</label>
+      <input type="radio" id="five" name="stress" value="5"><br>
+      <label id="four" for="4">4</label>
+      <input type="radio" id="four" name="stress" value="4"><br>
+      <label id="three" for="3">3</label>
+      <input type="radio" id="three" name="stress" value="3"><br>
+      <label id="two" for="2">2</label>
+      <input type="radio" id="two" name="stress" value="2"><br>
+      <label id="one" for="1">1</label>
+      <input type="radio" id="one" name="stress" value="1"><br>
+
   </div>
-  <div class="boxInput" id="body">
-    <p>Body</p>
-    <p>Body</p>
-  </div> 
+ 
   <div class="boxInput" id="inventory">
     <h2>Inventory</h2>
-      <p>1</p>
-      <p>2</p>
-      <p>3</p>
-      <p>4</p>
-      <p>5</p>
-      <p>6</p>
+    <label id="inv_1" for="inv_1">1</label>
+    <input type="text" id="inv_1"><br>
+    <label id="inv_2" for="inv_2">2</label>
+    <input type="text" id="inv_2"><br>
+    <label id="inv_3" for="inv_3">3</label>
+    <input type="text" id="inv_3"><br>
+    <label id="inv_4" for="inv_4">4</label>
+    <input type="text" id="inv_4"><br>
+    <label id="inv_5" for="inv_5">5</label>
+    <input type="text" id="inv_5"><br>
+    <label id="inv_6" for="inv_6">6</label>
+    <input type="text" id="inv_6"><br>
   </div>
+
   <div class="roundBox" id="credits">
-    <h3>Credits</h3>
+    <label id="credits" for="credits">Credits: $</label>
+    <input type="text" id="credits"><br>
   </div>
-  <div class="roundBox" id="positioning">
+  <div class="boxToggle" id="positioning">
     <h3>Positioning</h3>
-      <p>Good</p>
-      <p>Standard</p>
-      <p>Bad</p>
+    <label for="good">Good</label>
+    <input type="radio" id="good" name="positioning" value="good"><br>
+    <label for="standard">Standard</label>
+    <input type="radio" id="standard" name="positioning" value="standard"><br>
+    <label for="bad">Bad</label>
+    <input type="radio" id="bad" name="positioning" value="bad"><br>     
   </div>
+  
   <div class="boxInput" id="ActionRes">
     <h2>Action Resolution</h2>
       <h3>Action</h3>
         <h3>Result:</h3>
-          <p>1-2: fail</p>
-          <p>3-4: Progress</p>
-          <p>5-6: Success</p>
+         <label for="resFail">1-2:</label>
+         <input type="radio" id="resFail" name="Action" value="Fail">
+         <label for="resFail">Fail</label><br>
+         <label for="resProg">3-4:</label>
+         <input type="radio" id="resProg" name="Action" value="Progress">
+         <label for="resProg">Progress</label><br>
+         <label for="resSucc">5-6:</label>
+         <input type="radio" id="resSucc" name="Action" value="Succeed">
+         <label for="resSucc">Succeed </label><br>
       <h3>Danger</h3>
         <h3>Result:</h3>
-          <p>1-3: Realised</p>
-          <p>4-6: Avoided</p>
+          <label for="resReal">1-3:</label>
+          <input type="radio" id="resReal">
+          <label for="resReal">Realised</label><br><br>
+          <label for="resAvoid">4-6:</label>
+          <input type="radio" id="resAvoid">
+          <label for="resAvoid">Avoided</label><br>
       <h3>Stress</h3>
         <h3>Result:</h3>
-          <p>1-2: Panic Test</p>
-          <p>3-4: +1 Stress</p>
-          <p>5-6: Fine</p>
+          <label for="resPanic">1-2:</label>
+          <input type="radio" id="resPanic">
+          <label for="resPanic">Panic Test</label><br>
+          <label for="resStress">3-4:</label>
+          <input type="radio" id="resStress">
+          <label for="resStress">+1 Stress</label><br>
+          <label for="resFine">5-6:</label>
+          <input type="radio" id="resFine">
+          <label for="resFine">Fine</label><br>
       <h3>Harm</h3>
         <h3>Result:</h3>
-          <p>1-2: Injured</p>
-          <p>3-5: Condition</p>
-          <p>6: Fine</p>
+          <label for="resInj">1-2:</label>
+          <input type="radio" id="resInj">
+          <label for="resInj">Injured</label><br>
+          <label for="resCond">3-5:</label>
+          <input type="radio" id="resCond">
+          <label for="resCond">Condition</label><br>
+          <label for="resFine">  6:  </label>
+          <input type="radio" id="resFine">
+          <label for="resFine">Fine</label>
 
   </div>  
 </body>
