--- a/charSheet.html
+++ b/charSheet.html
@@ -46,23 +46,26 @@
   <div class="boxInput" id="inventory">
     <h2>Inventory</h2>
     <label id="inv_1" for="inv_1">1</label>
-    <input type="text" id="inv_1"><br>
+    <input class="invText" type="text" id="inv_1"><br>
     <label id="inv_2" for="inv_2">2</label>
-    <input type="text" id="inv_2"><br>
+    <input class="invText" type="text" id="inv_2"><br>
     <label id="inv_3" for="inv_3">3</label>
-    <input type="text" id="inv_3"><br>
+    <input class="invText" type="text" id="inv_3"><br>
     <label id="inv_4" for="inv_4">4</label>
-    <input type="text" id="inv_4"><br>
+    <input class="invText" type="text" id="inv_4"><br>
     <label id="inv_5" for="inv_5">5</label>
-    <input type="text" id="inv_5"><br>
+    <input class="invText" type="text" id="inv_5"><br>
     <label id="inv_6" for="inv_6">6</label>
-    <input type="text" id="inv_6"><br>
+    <input class="invText" type="text" id="inv_6"><br>
   </div>
+
+
 
   <div class="roundBox" id="credits">
     <label id="credits" for="credits">Credits: $</label>
     <input type="text" id="credits"><br>
   </div>
+
   <div class="boxToggle" id="positioning">
     <h3>Positioning</h3>
     <label for="good">Good</label>
@@ -72,7 +75,7 @@
     <label for="bad">Bad</label>
     <input type="radio" id="bad" name="positioning" value="bad"><br>     
   </div>
-  
+
   <div class="boxInput" id="ActionRes">
     <h2>Action Resolution</h2>
       <h3>Action</h3>
