--- a/charSheet.html
+++ b/charSheet.html
@@ -8,126 +8,141 @@
 </head>
 
 <body>
-  <h1>Hopeless: Character Sheet</h1>
+  <h1 class="centred">Hopeless: Character Sheet</h1>
 
-  <div class="roundBox" id="nameInput">
-    <label for="name">Name:</label>
-    <input type="text" id="name"><br>
-    <label for="Background">Background:</label>
-    <input type="text" id="Background"><br>
+  <div class="playerData">
+    <div class="roundBox" id="nameInput">
+      <label for="name">Name:      </label>
+      <input type="text" id="name"><br>
+      <label for="Background">Background:</label>
+      <input type="text" id="Background"><br>
+    </div>
+
+    <div class="boxToggle" id="raceInput">
+      <label for="human">Human</label>
+      <input type="radio" id="race" name="race" value="human"><br>
+      <label for="augmented">Augmented</label>
+      <input type="radio" id="race" name="race" value="augmented"><br>
+      <label for="synth">Synth</label>
+      <input type="radio" id="race" name="race" value="synth"><br>
+    </div>
   </div>
 
-  <div class="boxToggle" id="raceInput">
-    <label for="human">Human</label>
-    <input type="radio" id="race" name="race" value="human"><br>
-    <label for="augmented">Augmented</label>
-    <input type="radio" id="race" name="race" value="augmented"><br>
-    <label for="synth">Synth</label>
-    <input type="radio" id="race" name="race" value="synth"><br>
-  </div>
-  
-  <div class="roundBox" id="stress">
-    <h3>Stress:</h3>
-      <label id="six" for="6">6</label>
-      <input type="radio" id="six" name="stress" value="6"><br>
-      <label id="five" for="5">5</label>
-      <input type="radio" id="five" name="stress" value="5"><br>
-      <label id="four" for="4">4</label>
-      <input type="radio" id="four" name="stress" value="4"><br>
-      <label id="three" for="3">3</label>
-      <input type="radio" id="three" name="stress" value="3"><br>
-      <label id="two" for="2">2</label>
-      <input type="radio" id="two" name="stress" value="2"><br>
-      <label id="one" for="1">1</label>
-      <input type="radio" id="one" name="stress" value="1"><br>
-
-  </div>
+  <div class="layerTwo">
+    <div class="roundBox" id="stress">
+      <h3>Stress:</h3>
+       <label id="six" for="6">6</label>
+        <input type="radio" id="six" name="stress" value="6"><br>
+        <label id="five" for="5">5</label>
+        <input type="radio" id="five" name="stress" value="5"><br>
+        <label id="four" for="4">4</label>
+        <input type="radio" id="four" name="stress" value="4"><br>
+        <label id="three" for="3">3</label>
+        <input type="radio" id="three" name="stress" value="3"><br>
+        <label id="two" for="2">2</label>
+        <input type="radio" id="two" name="stress" value="2"><br>
+        <label id="one" for="1">1</label>
+        <input type="radio" id="one" name="stress" value="1"><br>
+    </div>
  
-  <div class="boxInput" id="inventory">
-    <h2>Inventory</h2>
-    <label id="inv_1" for="inv_1">1</label>
-    <input class="invText" type="text" id="inv_1"><br>
-    <label id="inv_2" for="inv_2">2</label>
-    <input class="invText" type="text" id="inv_2"><br>
-    <label id="inv_3" for="inv_3">3</label>
-    <input class="invText" type="text" id="inv_3"><br>
-    <label id="inv_4" for="inv_4">4</label>
-    <input class="invText" type="text" id="inv_4"><br>
-    <label id="inv_5" for="inv_5">5</label>
-    <input class="invText" type="text" id="inv_5"><br>
-    <label id="inv_6" for="inv_6">6</label>
-    <input class="invText" type="text" id="inv_6"><br>
-  </div>
+    <div class="boxInput" id="inventory">
+      <h2>Inventory</h2>
+        <label id="inv_1" for="inv_1">1</label>
+        <input class="invText" type="text" id="inv_1"><br>
+        <label id="inv_2" for="inv_2">2</label>
+        <input class="invText" type="text" id="inv_2"><br>
+        <label id="inv_3" for="inv_3">3</label>
+        <input class="invText" type="text" id="inv_3"><br>
+        <label id="inv_4" for="inv_4">4</label>
+        <input class="invText" type="text" id="inv_4"><br>
+        <label id="inv_5" for="inv_5">5</label>
+        <input class="invText" type="text" id="inv_5"><br>
+        <label id="inv_6" for="inv_6">6</label>
+        <input class="invText" type="text" id="inv_6"><br>
+    </div>
 
-
-
-  <div class="roundBox" id="credits">
-    <label id="creds" for="creds">Credits: $</label>
-    <input class="credText" type="text" id="creds">
+    <div class="equipped boxInput">
+      <label id="equipHand1" for="equipHand1">Main hand:</Label>
+      <input class="invText" type="text" id="equipHand1"><br>
+      <label id="equipHand2" for="equipHand2">Off hand:</Label>
+      <input class="invText" type="text" id="equipHand2"><br>
+      <label id="equipBody1" for="equipBody1">Body 1:  </Label>
+      <input class="invText" type="text" id="equipBody1"><br>
+      <label id="equipBody2" for="equipBody2">Body 2:  </Label>
+      <input class="invText" type="text" id="equipBody2"><br>
+    </div>
+  
+    <div class="roundBox" id="credits">
+      <label id="creds" for="creds">Credits: $</label>
+      <input class="credText" type="text" id="creds">
+    </div>
   </div>
 
   <div class="boxToggle" id="positioning">
-    <h3>Positioning</h3>
-    <label for="good">Good</label>
-    <input class="radButt" type="radio" id="good" name="positioning" value="good"><br>
-    <label for="standard">Standard</label>
-    <input class="radButt" type="radio" id="standard" name="positioning" value="standard"><br>
-    <label for="bad">Bad</label>
-    <input class="radButt" type="radio" id="bad" name="positioning" value="bad"><br>     
+    <h3 class="centred">Positioning</h3>
+      <label for="good">Good</label>
+      <input class="radButt" type="radio" id="good" name="positioning" value="good">
+      <label for="standard">Standard</label>
+      <input class="radButt" type="radio" id="standard" name="positioning" value="standard">
+      <label for="bad">Bad</label>
+      <input class="radButt" type="radio" id="bad" name="positioning" value="bad">   
   </div>
 
-  <div class="boxInput" id="actionRes">
-    <h2>Action Resolution</h2>
-      <h3>Action</h3>
-        <h3>Result:</h3>
-         <label for="resFail">1-2:</label>
-         <input class="radButt" type="radio" id="resFail" name="Action" value="Fail">
-         <label for="resFail">Fail</label><br>
-         <label for="resProg">3-4:</label>
-         <input class="radButt" type="radio" id="resProg" name="Action" value="Progress">
-         <label for="resProg">Progress</label><br>
-         <label for="resSucc">5-6:</label>
-         <input class="radButt" type="radio" id="resSucc" name="Action" value="Succeed">
-         <label for="resSucc">Succeed </label><br>
-  </div>
+<div class="boxInput resolutions">
+  <h2>Action Resolution</h2>
+</div>    
+  <div class="boxInput resolutions" id="actionRes">
+    <h3>Action</h3>
+      <h3>Result:</h3>
+        <label for="resFail">1-2:</label>
+        <input class="radButt" type="radio" id="resFail" name="Action" value="Fail">
+        <label for="resFail">Fail</label><br>
+        <label for="resProg">3-4:</label>
+        <input class="radButt" type="radio" id="resProg" name="Action" value="Progress">
+        <label for="resProg">Progress</label><br>
+        <label for="resSucc">5-6:</label>
+        <input class="radButt" type="radio" id="resSucc" name="Action" value="Succeed">
+        <label for="resSucc">Succeed </label>
+    </div>
 
-  <div class="boxInput" id="dangerRes">
+    <div class="boxInput" id="dangerRes">
       <h3>Danger</h3>
         <h3>Result:</h3>
           <label for="resReal">1-3:</label>
-          <input class="radButt" type="radio" id="resReal">
+          <input class="radButt" type="radio" id="resReal" name="Danger" value="1-3">
           <label for="resReal">Realised</label><br><br>
           <label for="resAvoid">4-6:</label>
-          <input class="radButt" type="radio" id="resAvoid">
-          <label for="resAvoid">Avoided</label><br>
-  </div>
+          <input class="radButt" type="radio" id="resAvoid" name="Danger" value="4-6">
+          <label for="resAvoid">Avoided</label>
+    </div>
 
-  <div class="boxInput" id="stressRes">
+    <div class="boxInput" id="stressRes">
       <h3>Stress</h3>
         <h3>Result:</h3>
           <label for="resPanic">1-2:</label>
-          <input class="radButt" type="radio" id="resPanic">
+          <input class="radButt" type="radio" id="resPanic" name="Panic" value="Test">
           <label for="resPanic">Panic Test</label><br>
           <label for="resStress">3-4:</label>
-          <input class="radButt" type="radio" id="resStress">
+          <input class="radButt" type="radio" id="resStress" name="Panic" value="plusOne">
           <label for="resStress">+1 Stress</label><br>
           <label for="resFine">5-6:</label>
-          <input class="radButt" type="radio" id="resFine">
-          <label for="resFine">Fine</label><br>
-  </div>
-
-  <div class="boxInput" id="harmRes">
-      <h3>Harm</h3>
-        <h3>Result:</h3>
-          <label for="resInj">1-2:</label>
-          <input class="radButt" type="radio" id="resInj">
-          <label for="resInj">Injured</label><br>
-          <label for="resCond">3-5:</label>
-          <input class="radButt" type="radio" id="resCond">
-          <label for="resCond">Condition</label><br>
-          <label for="resFine">  6:  </label>
-          <input class="radButt" type="radio" id="resFine">
+          <input class="radButt" type="radio" id="resFine" name="Panic" value="Fine">
           <label for="resFine">Fine</label>
-    </div>  
+    </div>
+
+    <div class="boxInput" id="harmRes">
+        <h3>Harm</h3>
+          <h3>Result:</h3>
+            <label for="resInj">1-2:</label>
+            <input class="radButt" type="radio" id="resInj" name="Harm" value="injured">
+            <label for="resInj">Injured</label><br>
+            <label for="resCond">3-5:</label>
+            <input class="radButt" type="radio" id="resCond" name="Harm" value="Cond">
+            <label for="resCond">Condition</label><br>
+            <label for="resFine">  6:  </label>
+            <input class="radButt" type="radio" id="resFine" name="Harm" value="harmFine">
+            <label for="resFine">Fine</label>
+      </div> 
+  </div>       
 </body>
 </html>
