--- a/charSheet.html
+++ b/charSheet.html
@@ -8,29 +8,29 @@
 </head>
 
 <body>
-  <h1 class="centred">Hopeless: Character Sheet</h1>
+  <h1 class="centred grey box" id="topTitle">Hopeless: Character Sheet</h1>
 
   <div class="playerData">
-    <div id="nameInput">
-      <label for="name">Name:      </label>
+    <div class="grey box" id="nameInput">
+      <label for="name">Name:</label>
       <input type="text" id="name"><br>
       <label for="Background">Background:</label>
       <input type="text" id="Background"><br>
     </div>
 
-    <div id="raceInput">
-      <label for="human">Human</label>
+    <div class="grey box" id="raceInput">
+      <label for="human">Human:</label>
       <input type="radio" id="race" name="race" value="human"><br>
-      <label for="augmented">Augmented</label>
+      <label for="augmented">Augmented:</label>
       <input type="radio" id="race" name="race" value="augmented"><br>
-      <label for="synth">Synth</label>
+      <label for="synth">Synth:</label>
       <input type="radio" id="race" name="race" value="synth"><br>
     </div>
   </div>
 
   <div class="layerTwo">
-    <div class="grey" id="stress">
-      <h3>Stress:</h3>
+    <div class="grey box" id="stress">
+      <h2>Stress:</h2>
        <label id="six" for="6">6</label>
         <input type="radio" id="six" name="stress" value="6"><br>
         <label id="five" for="5">5</label>
@@ -45,8 +45,8 @@
         <input type="radio" id="one" name="stress" value="1"><br>
     </div>
  
-    <div claass="grey" id="inventory">
-      <h2>Inventory</h2>
+    <div class="grey box" id="inventory">
+      <h2>Inventory:</h2>
         <label id="inv_1" for="inv_1">1</label>
         <input class="invText" type="text" id="inv_1"><br>
         <label id="inv_2" for="inv_2">2</label>
@@ -61,25 +61,28 @@
         <input class="invText" type="text" id="inv_6"><br>
     </div>
 
-    <div class="grey" id="equipped">
-      <label id="equipHand1" for="equipHand1">Main hand:</Label>
-      <input class="invText" type="text" id="equipHand1"><br>
-      <label id="equipHand2" for="equipHand2">Off hand:</Label>
-      <input class="invText" type="text" id="equipHand2"><br>
-      <label id="equipBody1" for="equipBody1">Body 1:  </Label>
-      <input class="invText" type="text" id="equipBody1"><br>
-      <label id="equipBody2" for="equipBody2">Body 2:  </Label>
-      <input class="invText" type="text" id="equipBody2"><br>
-    </div>
+    <div class="grey box">
+      <div id="equipped">
+        <h2>Equipped</h2>
+          <label id="equipHand1" for="equipHand1">Main hand:</Label>
+          <input class="invText" type="text" id="equipHand1"><br>
+          <label id="equipHand2" for="equipHand2">Off hand:</Label>
+          <input class="invText" type="text" id="equipHand2"><br>
+          <label id="equipBody1" for="equipBody1">Body 1:  </Label>
+          <input class="invText" type="text" id="equipBody1"><br>
+          <label id="equipBody2" for="equipBody2">Body 2:  </Label>
+          <input class="invText" type="text" id="equipBody2"><br>
+      </div>
   
-    <div id="credits grey">
-      <label id="creds" for="creds">Credits: $</label>
-      <input class="credText" type="text" id="creds">
+      <div class="grey box">
+        <label id="creds" for="creds">Credits: $</label>
+        <input class="credText" type="text" id="creds">
+      </div>
     </div>
   </div>
-
-  <div id="positioning grey">
-    <h3 class="centred">Positioning</h3>
+  
+  <div class="grey box centred" id="positioning">
+    <h2>Positioning</h2>
       <label for="good">Good</label>
       <input class="radButt" type="radio" id="good" name="positioning" value="good">
       <label for="standard">Standard</label>
@@ -88,11 +91,12 @@
       <input class="radButt" type="radio" id="bad" name="positioning" value="bad">   
   </div>
 
-<div class="resolutions box grey">
-  <h2>Action Resolution</h2>
+  <div class="resolutions grey box centred" id="resTitle">
+    <h2>Action Resolution</h2>
+  
     
-  <div class= "resolutions" id="actionRes">
-    <h3>Action</h3>
+  <div class="grey box" id="actionRes">
+    <h3 id="resTitle">Action</h3>
       <h3>Result:</h3>
         <label for="resFail">1-2:</label>
         <input class="radButt" type="radio" id="resFail" name="Action" value="Fail">
@@ -105,8 +109,8 @@
         <label for="resSucc">Succeed </label>
     </div>
 
-    <div id="dangerRes">
-      <h3>Danger</h3>
+    <div class="grey box" id="dangerRes">
+      <h3 id="resTitle">Danger</h3>
         <h3>Result:</h3>
           <label for="resReal">1-3:</label>
           <input class="radButt" type="radio" id="resReal" name="Danger" value="1-3">
@@ -116,8 +120,8 @@
           <label for="resAvoid">Avoided</label>
     </div>
 
-    <div id="stressRes">
-      <h3>Stress</h3>
+    <div class="grey box" id="stressRes">
+      <h3 id="resTitle">Stress</h3>
         <h3>Result:</h3>
           <label for="resPanic">1-2:</label>
           <input class="radButt" type="radio" id="resPanic" name="Panic" value="Test">
@@ -130,8 +134,8 @@
           <label for="resFine">Fine</label>
     </div>
 
-    <div id="harmRes">
-        <h3>Harm</h3>
+    <div class="grey box" id="harmRes">
+        <h3 id="resTitle">Harm</h3>
           <h3>Result:</h3>
             <label for="resInj">1-2:</label>
             <input class="radButt" type="radio" id="resInj" name="Harm" value="injured">
@@ -142,8 +146,8 @@
             <label for="resFine">  6:  </label>
             <input class="radButt" type="radio" id="resFine" name="Harm" value="harmFine">
             <label for="resFine">Fine</label>
-      </div>
-    </div> 
+    </div>
+  </div>
   </div>       
 </body>
 </html>
