--- a/charSheet.html
+++ b/charSheet.html
@@ -61,8 +61,8 @@
         <input class="invText" type="text" id="inv_6"><br>
     </div>
 
-    <div class="grey box">
-      <div id="equipped">
+    <div class="grey box" id="equipped">
+      <div>
         <h2>Equipped</h2>
           <label id="equipHand1" for="equipHand1">Main hand:</Label>
           <input class="invText" type="text" id="equipHand1"><br>
@@ -80,7 +80,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="grey box centred" id="positioning">
     <h2>Positioning</h2>
       <label for="good">Good</label>
